make BEAST 2.6 compatible